Support for ENUM - Dropped anything below 11.6

--- a/tests/ClassDocumentation/test1/src/eu/rssw/pct/C.cls
+++ b/tests/ClassDocumentation/test1/src/eu/rssw/pct/C.cls
@@ -1,5 +1,5 @@
-// using Progress.Lang.*.
-
+/* Enum comment
+ * <a href="test">Some text in an anchor</a>*/
 enum eu.rssw.pct.C:
-  define enum val1 val2 val3.
+  define enum /* val1 !! */ val1 val2 /* Last val */ val3.
 end enum.
